--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,12 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "platform": {
+                 "php": "7.4.3"
+
+         
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true
